--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         </div>
         <a href="#" class="card__change">Change</a>
       </section>
-      <button class="button button--payment">Proceed to Payment</button>
-      <button class="button button--cancel">Cancel Order</button>
+      <!-- <button class="button button--payment">Proceed to Payment</button>
+      <button class="button button--cancel">Cancel Order</button> -->
     </article>
   </body>
 </html>
